--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.1.0"
+    "vue-property-decorator": "^8.1.0",
+    "webpack": "^4.41.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
