--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "minimist": ">=1.2.2"
   },
   "postcss": {
     "plugins": {
