--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-pwa": "^3.9.0",
     "@vue/cli-plugin-typescript": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
-    "node-sass": "^4.9.0",
+    "@vue/cli-service": "^4.2.3",
+    "minimist": ">=1.2.2",
+    "node-sass": "^4.13.1",
     "sass-loader": "^7.1.0",
+    "serialize-javascript": "3.0.0",
     "typescript": "^3.4.3",
-    "vue-template-compiler": "^2.6.10",
-    "minimist": ">=1.2.2"
+    "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
     "plugins": {
