--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "sass-loader": "^7.1.0",
     "serialize-javascript": "3.0.0",
     "typescript": "^3.4.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "kind-of": ">=6.0.3"
   },
   "postcss": {
     "plugins": {
